[project]
name = "sql-repair-env"
version = "1.0.0"
description = "SQL Query Repair Environment — agents debug and fix broken SQL queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "openai>=1.55.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
